--- a/css/kagami.css
+++ b/css/kagami.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	font-family: 'Hiragino Kaku Gothic ProN','メイリオ', Roboto,'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, 'Segoe UI', Arial, sans-serif;
+	font-family: 'メイリオ', Roboto,'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, 'Segoe UI', Arial, sans-serif;
 	color: #909090;
 	background: #111;
 }
