--- a/css/swiper.css
+++ b/css/swiper.css
@@ -10,15 +10,16 @@
  * Released on: November 13, 2017
  */
 
-  html, body {
+
+    html, body {
       position: relative;
-      height: 100%;
+      height: 80%;
     }
     body {
-      background: #fff;
-      font-family: Hiragino Kaku Gothic ProN,ƒqƒ‰ƒMƒmŠpƒS ProN W3,ƒƒCƒŠƒI,Meiryo,‚l‚r ƒSƒVƒbƒN,Helvetica Neue, Helvetica, Arial, sans-serif;
+      background: #eee;
+      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
       font-size: 14px;
-      color:#fff;
+      color:#000;
       margin: 0;
       padding: 0;
     }
@@ -44,12 +45,12 @@
       -webkit-align-items: center;
       align-items: center;
     }
-.swiper-container {
   margin: 0 auto;
   position: relative;
   overflow: hidden;
   list-style: none;
   padding: 0;
+
   /* Fix of Webkit flickering */
   z-index: 1;
 }
