--- a/css/swiper.css
+++ b/css/swiper.css
@@ -318,7 +318,7 @@ button.swiper-pagination-bullet {
 }
 .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #007aff;
+  background: #000;
 }
 .swiper-container-vertical > .swiper-pagination-bullets {
   right: 10px;
