--- a/css/neon.css
+++ b/css/neon.css
@@ -9,7 +9,7 @@ body {
     border-radius: 4px;
     width: 500px;
     margin: 20px auto 0 auto;
-    padding: 10px;
+Å@Å@padding: 1em 0 ;
     background-color: #000;
     width: 99%;
 }
